Header display issues on mobile (#237)
* refs #65525: adjusting home menus and breadcrumbs.

* refs #65525: changing styles following feedback comments.

---------

--- a/fw-child/resources/scss/_variables.scss
+++ b/fw-child/resources/scss/_variables.scss
@@ -1604,10 +1604,10 @@ $figure-caption-color:              var(--#{$prefix}secondary-color) !default;
 // Breadcrumbs
 
 // scss-docs-start breadcrumb-variables
-$breadcrumb-font-size:              1.25rem;
+$breadcrumb-font-size:              1rem;
 $breadcrumb-padding-y:              0 !default;
 $breadcrumb-padding-x:              0 !default;
-$breadcrumb-item-padding-x:         .5rem !default;
+$breadcrumb-item-padding-x:         .25rem !default;
 $breadcrumb-margin-bottom:          1rem !default;
 $breadcrumb-bg:                     null !default;
 $breadcrumb-divider-color:          var(--#{$prefix}secondary-color) !default;
